--- a/hanny.html
+++ b/hanny.html
@@ -1,10 +1,12 @@
 <DOCTYPE html>
-  <html>
-      <head>
-        <title>my first web page!
-      </head>
-      <body>
-        hello everyone hello again
-        <h1>hello everyone<h1>
-      </body>
- </html>
+    <html>
+        <head>
+            <title>my first web page</title>
+        </head>
+        <body>
+            hello world
+        </body>
+    </html>
+
+
+      
